# call-me-maybe

./: Makefile  pyproject.toml
data/input/: function_calling_tests.json  function_definitions.json  functions_definition.json
data/output/: function_calling_results.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  llm_engine.py
